--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,10 @@
     padding-right: 44px;
   }
 
+  .header__top {
+    justify-content: space-between;
+  }
+
   .header__logo {
     margin-right: 0;
   }
@@ -99,10 +103,6 @@
     flex-direction: column;
   }
 
-  .header__top {
-    justify-content: space-between;
-  }
-
   .header__login {
    display: none;
   }
@@ -124,7 +124,19 @@
   }
 
   .header__search-top {
+    display: flex;
+  }
+
+  .search-top__wrapper {
+    display: none;
+  }
+
+  .search-top__wrapper--active {
     display: block;
+  }
+
+  .search-top__close {
+    cursor: pointer;
   }
 
   .search-top__btn {
@@ -134,5 +146,12 @@
   .search-top__icon rect,
   .search-top__icon path {
     fill: var(--color-white-1);
+  }
+
+  .search-top__submit {
+    background-color: transparent;
+    border: none;
+    outline: 0;
+    border-bottom: 1px solid var(--color-white-1);
   }
 }
