--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 :root {
-  --color-white-1: #ffffff;
   --color-black-opacity90: #00000090;
+  --color-black-opacity50: #00000050;
+  --color-purple-opacity40: #C283F340;
+  --color-white-1: #ffffff;
   --color-black-1: #000000;
   --color-black-2: #333333;
   --color-grey-1: #666666;
@@ -73,6 +75,7 @@ body {
 }
 
 .header__container {
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -161,4 +164,184 @@ body {
 
 .search-top__btn {
   display: none;
+}
+
+.header__bottom {
+  background-color: var(--color-black-opacity50);
+  padding: 20px 0;
+}
+
+.dropdown {
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1037px;
+  margin-right: 20px;
+}
+
+.dropdown__item {
+  position: relative;
+}
+
+.dropdown__btn {
+  padding: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--color-white-1);
+  outline: 0;
+  cursor: pointer;
+  transition: color .3s ease-in-out;
+}
+
+.dropdown__icon {
+  transform: translateY(-2px);
+  stroke: var(--color-white-1);
+  transition: stroke .3s ease-in-out;
+}
+
+.dropdown__btn:focus-visible {
+  background-color: var(--color-purple-4);
+  outline-offset: -1px;
+  outline: 7px solid var(--color-purple-4);
+}
+
+.dropdown__btn:hover,
+.dropdown__btn:hover .dropdown__icon {
+  stroke: var(--color-purple-3);
+  color: var(--color-purple-3);
+}
+
+.dropdown__btn:active,
+.dropdown__btn:active .dropdown__icon  {
+  stroke: var(--color-purple-3);
+  color: var(--color-purple-4);
+}
+
+.dropdown__content {
+  display: none;
+}
+
+.dropdown__content--active {
+  display: block;
+  position: absolute;
+  top: 48px;
+  left: 0;
+}
+
+.dropdown__list {
+  background-color: var(--color-black-opacity50);
+  padding: 40px;
+}
+
+.dropdown__element:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.dropdown__element {
+  position: relative;
+  display: flex;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-width: 220px;
+  min-height: 40px;
+}
+
+.dropdown__element::before {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: var(--color-purple-opacity40);
+  opacity: 0;
+  transition: all .3s ease-in-out;
+}
+
+.element-img-1 {
+  background-image: url(../img/header/list-1-1.png);
+}
+
+.element-img-2 {
+  background-image: url(../img/header/list-1-2.png);
+}
+
+.element-img-3 {
+  background-image: url(../img/header/list-1-3.png);
+}
+
+.element-img-4 {
+  background-image: url(../img/header/list-1-4.png);
+}
+
+.dropdown__link {
+  outline: 0;
+  position: relative;
+  padding-left: 14px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  color: var(--color-white-1);
+  border: 2px solid transparent;
+  transition: border .3s ease-in-out, opacity .3s ease-in-out, background-color .3s ease-in-out;
+}
+
+.dropdown__link:focus-visible {
+  border: 2px solid var(--color-purple-3);
+}
+
+.dropdown__link:hover {
+  border: 2px solid var(--color-purple-3);
+}
+
+.dropdown__link:active {
+  opacity: 1;
+  background-color: var(--color-purple-opacity40);
+}
+
+.search-bottom {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.search-bottom__btn {
+  padding: 0;
+}
+
+.search__bottom-icon {
+  outline: 0;
+  padding-right: 6px;
+}
+
+.search-bottom__submit {
+  outline: 0;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--color-white-1);
+  border-bottom: 1px solid var(--color-white-1);
+  width: 218px;
+  transition: border-bottom .3s ease-in-out;
+}
+
+.search-bottom__submit:focus-visible {
+  border-bottom: 1px solid var(--color-purple-2);
+}
+
+.search-bottom__submit:hover {
+  border-bottom: 1px solid var(--color-purple-2);
+}
+
+.search-bottom__submit:active {
+  border-bottom: 1px solid var(--color-purple-4);
+}
+
+.search-bottom__submit::placeholder {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--color-white-1)
 }
