--- a/css/style.css
+++ b/css/style.css
@@ -195,9 +195,9 @@ body {
 }
 
 .dropdown__icon {
-  transform: translateY(-2px);
+  transform: rotate(180deg);
   stroke: var(--color-white-1);
-  transition: stroke .3s ease-in-out;
+  transition: stroke .3s ease-in-out, rotate .3s ease-in-out;
 }
 
 .dropdown__btn:focus-visible {
@@ -214,6 +214,12 @@ body {
 
 .dropdown__btn:active,
 .dropdown__btn:active .dropdown__icon  {
+  stroke: var(--color-purple-3);
+  color: var(--color-purple-4);
+}
+
+.dropdown__btn--active,
+.dropdown__icon--active {
   stroke: var(--color-purple-3);
   color: var(--color-purple-4);
 }
@@ -258,20 +264,84 @@ body {
   transition: all .3s ease-in-out;
 }
 
-.element-img-1 {
+.element-img-1-1 {
   background-image: url(../img/header/list-1-1.png);
 }
 
-.element-img-2 {
+.element-img-1-2 {
   background-image: url(../img/header/list-1-2.png);
 }
 
-.element-img-3 {
+.element-img-1-3 {
   background-image: url(../img/header/list-1-3.png);
 }
 
-.element-img-4 {
+.element-img-1-4 {
   background-image: url(../img/header/list-1-4.png);
+}
+
+.element-img-2-1 {
+  background-image: url(../img/header/list-2-1.png);
+}
+
+.element-img-2-2 {
+  background-image: url(../img/header/list-2-2.png);
+}
+
+.element-img-2-3 {
+  background-image: url(../img/header/list-2-3.png);
+}
+
+.element-img-2-4 {
+  background-image: url(../img/header/list-2-4.png);
+}
+
+.element-img-3-1 {
+  background-image: url(../img/header/list-3-1.png);
+}
+
+.element-img-3-2 {
+  background-image: url(../img/header/list-3-2.png);
+}
+
+.element-img-3-3 {
+  background-image: url(../img/header/list-3-3.png);
+}
+
+.element-img-3-4 {
+  background-image: url(../img/header/list-3-4.png);
+}
+
+.element-img-4-1 {
+  background-image: url(../img/header/list-4-1.png);
+}
+
+.element-img-4-2 {
+  background-image: url(../img/header/list-4-2.png);
+}
+
+.element-img-4-3 {
+  background-image: url(../img/header/list-4-3.png);
+}
+
+.element-img-4-4 {
+  background-image: url(../img/header/list-4-4.png);
+}
+
+.element-img-5-1 {
+  background-image: url(../img/header/list-5-1.png);
+}
+
+.element-img-5-2 {
+  background-image: url(../img/header/list-5-2.png);
+}
+
+.element-img-5-3 {
+  background-image: url(../img/header/list-5-3.png);
+}
+
+.element-img-5-4 {
+  background-image: url(../img/header/list-5-4.png);
 }
 
 .dropdown__link {
