--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,11 @@ body {
   border: 0;
 }
 
+.title,
+.description {
+  margin: 0;
+}
+
 .container {
   max-width: 1630px;
   padding-left: 15px;
@@ -167,8 +172,11 @@ body {
 }
 
 .header__bottom {
+  position: absolute;
+  width: 100%;
   background-color: var(--color-black-opacity50);
   padding: 20px 0;
+  z-index: 3;
 }
 
 .dropdown {
@@ -415,4 +423,111 @@ body {
   font-size: 18px;
   line-height: 25px;
   color: var(--color-white-1)
+}
+
+.hero {
+  position: relative;
+}
+
+.hero .hero__swiper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+}
+
+.hero__container {
+  position: relative;
+  z-index: 3;
+}
+
+.hero__content {
+  padding-top: 133px;
+  max-width: 600px;
+  padding-bottom: 122px;
+}
+
+.hero__title {
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 98px;
+  color: var(--color-white-1);
+}
+
+.hero__description {
+  margin-bottom: 92px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  color: var(--color-white-1);
+}
+
+.hero__action {
+  display: block;
+}
+
+.hero__link-btn {
+  padding: 17px 35px;
+  border: 3px solid transparent;
+  border-radius: 100px;
+  background-color: var(--color-purple-3);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--color-white-1);
+  transition: border .3s ease-in-out, background-color .3s ease-in-out;
+}
+
+.hero__link-btn:focus-visible {
+  outline-offset: 4px;
+  outline: 2px solid var(--color-purple-2);
+}
+
+.hero__link-btn:hover {
+  border: 3px solid var(--color-purple-1);
+}
+
+.hero__link-btn:active {
+  border: 3px solid var(--color-purple-1);
+  background-color: var(--color-purple-4);
+}
+
+.hero__slide {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero__slide-1:nth-child(1) {
+  background-image: url(../img/hero/hero-1.png);
+}
+
+.hero__slide-2:nth-child(2) {
+  background-image: url(../img/hero/hero-2.png);
+}
+
+.hero__slide-3:nth-child(3) {
+  background-image: url(../img/hero/hero-3.png);
+}
+
+.animate-reduce {
+  animation: animate_reduce 3.5s infinite;
+}
+
+.animate-reduce:hover {
+	animation: none;
+}
+
+@keyframes animate_reduce {
+	0% {
+		transform: scale3d(1, 1, 1);
+	}
+	50% {
+		transform: scale3d(1.05, 1.05, 1.05);
+	}
+	100% {
+		transform: scale3d(1, 1, 1);
+	}
 }
