correct adaptive version adn added plugin simplevar for scroll dropdown and write section about

--- a/css/media.css
+++ b/css/media.css
@@ -220,6 +220,10 @@
     padding-right: 15px;
   }
 
+  .header__nav--open {
+    padding-left: 15px;
+  }
+
   .hero__content {
     display: flex;
     flex-direction: column;
@@ -257,12 +261,28 @@
     color: var(--color-white-1);
     transition: border .3s ease-in-out, background-color .3s ease-in-out;
   }
-
 }
 
 @media (max-width: 375px) {
+  .offset {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
   .header__logo-img {
     width: 97px;
     height: 22px;
+  }
+
+  .about__title {
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 38px;
+    margin-bottom: 12px;
+  }
+
+  .about__description {
+    font-size: 14px;
+    line-height: 28px;
   }
 }
