--- a/css/style.css
+++ b/css/style.css
@@ -272,11 +272,6 @@ body {
   background-color: var(--color-white-1);
 }
 
-/* .dropdown__list {
-  background-color: var(--color-black-opacity50);
-  padding: 40px;
-} */
-
 .dropdown__element:not(:last-child) {
   margin-bottom: 20px;
 }
@@ -574,4 +569,216 @@ body {
   font-size: 16px;
   line-height: 32px;
   color: var(--color-black-2);
+}
+
+.gallery {
+  background-image: url('../img/gallery/bg.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.gallery__content-left,
+.gallery__content-right {
+  width: 50%;
+}
+
+.gallery__content-left {
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.gallery__title {
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 65px;
+  color: var(--color-white-1)
+}
+
+.gallery__subtitle {
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-white-1);
+}
+
+/* plugin choices */
+
+.choices {
+  margin: 0;
+  font-size: 18px;
+  color: #fff;
+  margin-bottom: auto;
+}
+
+.choices[data-type*=select-one] .choices__inner {
+  padding-bottom: 10px;
+}
+
+.choices__inner {
+  display: inline-block;
+  width: 100%;
+  max-width: 100%;
+  vertical-align: middle;
+  background-color: transparent;
+  padding: 0;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  font-size: 18px;
+  min-height: 0;
+  overflow: hidden;
+}
+
+.is-open
+.choices__inner {
+  border-radius: 10px 10px 10px 10px;
+}
+
+.choices__list--dropdown,
+.choices__list[aria-expanded] {
+  visibility: hidden;
+  z-index: 1;
+  position: absolute;
+  max-width: 100%;
+  background-color: var(--black-color);
+  border: 1px solid #999;
+  top: 100%;
+  margin-top: -1px;
+  border-bottom-left-radius: 2.5px;
+  border-bottom-right-radius: 2.5px;
+  border-radius: 10px;
+  overflow: hidden;
+  word-break: break-all;
+  will-change: visibility;
+}
+
+.choices__list--single {
+  display: inline-block;
+  padding: 0;
+  width: 100%;
+}
+
+.choices__list--dropdown .choices__item--selectable, .choices__list[aria-expanded] .choices__item--selectable {
+  padding-right: 20px;
+}
+
+.choices__list--dropdown .choices__item, .choices__list[aria-expanded] .choices__item {
+  position: relative;
+  padding: 10px;
+  font-size: 16px;
+  border-bottom: 1px solid #999;
+}
+
+.choices__list--dropdown .choices__item--selectable.is-highlighted, .choices__list[aria-expanded] .choices__item--selectable.is-highlighted {
+  background-color: #dadada76;
+  color: #fff;
+}
+
+.choices__list--dropdown .choices__item--selectable::after, .choices__list[aria-expanded] .choices__item--selectable::after {
+  content: '';
+  font-size: 12px;
+  opacity: 0;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.choices[data-type*=select-one]::after {
+  top: 24px;
+  height: 8px;
+  width: 8px;
+  border-width: 0px;
+  right: 20px;
+  border-right: 1px solid #fff;
+  border-top: 1px solid #fff;
+  transform: rotate(135deg);
+  margin-top: -6px;
+}
+
+.choices[data-type*=select-one].is-open::after {
+  border-width: 0px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  margin-top: -2px;
+}
+
+.choices__list--dropdown .choices__item--selectable::after {
+  display: none;
+}
+
+#choices--selectCustom-item-choice-1 {
+  display: none;
+}
+
+/* --- */
+
+.gallery__checkbox-period {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.checkbox-period__block {
+  position: relative;
+  padding-left: 20px;
+  color: var(--color-white-1);
+  line-height: 32px;
+  cursor: pointer;
+  transition: .3s ease-in-out;
+}
+
+.checkbox-period__block:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.checkbox-reset {
+  display: none;
+}
+
+.checkbox-period__gallery + span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 12px;
+  height: 12px;
+  text-align: center;
+  transform: translateY(10px);
+  border: 1px solid var(--color-white-1);
+  transition: .3s ease-in-out;
+}
+
+.checkbox-period__gallery + span::before {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  right: 3px;
+  bottom: 3px;
+  border-radius: 100%;
+  opacity: 0;
+  background-color: #C283F3;
+  transition: opacity .3s ease-in-out;
+}
+
+.checkbox-period__gallery:checked + span::before {
+  opacity: 1;
+}
+
+.checkbox-period__block:hover {
+  color: var(--color-purple-2);
+}
+
+.checkbox-period__gallery:hover + span {
+  border: 1px solid var(--color-purple-2);
+}
+
+.gallery__slider-button {
+  margin-bottom: 30px;
 }
