--- a/css/style.css
+++ b/css/style.css
@@ -578,14 +578,24 @@ body {
   background-size: cover;
 }
 
-.gallery__content-left,
+/* .gallery__content-left,
 .gallery__content-right {
   width: 50%;
-}
+} */
+
+/* Остановился на контейнере */
 
 .gallery__content-left {
   flex-direction: column;
   justify-content: space-between;
+  min-width: 300px;
+  margin-right: 50px;
+}
+
+.gallery__content-right {
+  max-width: 1150px;
+  width: 100%;
+  overflow: hidden;
 }
 
 .gallery__title {
@@ -779,6 +789,21 @@ body {
   border: 1px solid var(--color-purple-2);
 }
 
+.gallery__content-right .swiper-wrapper {
+  height: 350px;
+}
+
 .gallery__slider-button {
   margin-bottom: 30px;
+}
+
+.gallery__btn {
+  cursor: pointer;
+}
+
+.gallery__slide-img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: center;
 }
