--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
   --color-black-2: #333333;
   --color-grey-1: #666666;
   --color-grey-2: #999999;
+  --color-grey-3: #ECECEC;
+  --color-grey-4: #CACACA;
   --color-purple-1: #D1A9F0;
   --color-purple-2: #C283F3;
   --color-purple-3: #9D5CD0;
@@ -36,6 +38,11 @@ ul {
 
 li {
   list-style: none;
+}
+
+figure {
+  margin: 0;
+  font-size: 0;
 }
 
 img {
@@ -791,7 +798,37 @@ body {
 }
 
 .gallery__btn {
+  width: 30px;
+  height: 30px;
+  outline: 0;
   cursor: pointer;
+}
+
+.gallery__btn.swiper-button-disabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
+.gallery__btn svg {
+  fill: var(--color-grey-1);
+  transition: fill .3s ease-in-out, stroke .3s ease-in-out;
+}
+
+.gallery__btn:focus-visible {
+  outline-offset: -2px;
+  outline: 2px solid var(--color-black-1);
+  border-radius: 100%;
+}
+
+.gallery__btn:hover svg {
+  fill: var(--color-purple-3);
+}
+
+.gallery__btn:active svg {
+  fill: var(--color-purple-4);
+  outline-offset: -2px;
+  outline: 2px solid var(--color-black-1);
+  border-radius: 100%;
 }
 
 .gallery__slider--pagination {
@@ -841,6 +878,11 @@ body {
   transition: .3s ease-in-out;
 }
 
+.gallery__slide:focus-visible {
+  outline-offset: -2px;
+  outline: 2px solid var(--color-purple-4);
+}
+
 .gallery__slide:hover::before {
   z-index: 1;
   opacity: 1;
@@ -856,4 +898,187 @@ body {
   width: 100%;
   height: 100%;
   object-position: center;
+}
+
+.catalog__title {
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 65px;
+  color: var(--color-black-2);
+}
+
+.catalog__description {
+  max-width: 1080px;
+  padding-bottom: 50px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-black-2);
+}
+
+.catalog__person {
+  max-width: 750px;
+  margin-right: 50px;
+}
+
+.catalog__img {
+  margin-bottom: 30px;
+}
+
+.catalog__name-person {
+  margin-bottom: 15px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+  color: var(--color-black-2);
+}
+
+.catalog__info-data {
+  display: block;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: var(--color-grey-2);
+  font-style: normal;
+  margin-bottom: 5px;
+}
+
+.catalog__description-person {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-black-2);
+}
+
+.accordion {
+  width: 100%;
+}
+
+.ac-panel {
+  height: 180px;
+}
+
+.accordion__list {
+  max-width: 800px;
+}
+
+.accordion__item {
+  cursor: pointer;
+}
+
+.accordion__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  border-top: 1px solid var(--color-grey-4);
+  border-bottom: 1px solid var(--color-grey-4);
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  margin-top: -1px;
+  transition: border-color .3s ease-in-out;
+}
+
+.accordion__btn {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  background-color: transparent;
+  transform: rotate(180deg);
+  transition-property: transform;
+  transition: .3s ease-in-out;
+  border-radius: 100%;
+}
+
+.accordion__btn svg {
+  fill: var(--color-grey-3);
+  transition: fill .3s ease-in-out;
+}
+
+.accordion__top .accordion__title {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: var(--color-black-2);
+  transition: color .3s ease-in-out;
+}
+
+.accordion__item:active .accordion__btn {
+  transform: rotate(0);
+  outline-offset: -2px;
+  outline: 2px solid var(--color-purple-3);
+  border-radius: 100%;
+}
+
+.accordion__top:hover {
+  border-color: var(--color-purple-3);
+  position: relative;
+  z-index: 1;
+}
+
+.accordion__top:focus-within {
+  border-color: var(--color-grey-4);
+}
+
+.accordion__top:focus-within .accordion__btn svg{
+  border-color: var(--color-purple-3);
+  fill: var(--color-purple-2);
+  outline: 2px solid var(--color-purple-3);
+  border-radius: 100%;
+  outline: 0;
+  border: 0;
+}
+
+.accordion__top:focus-within .accordion__title {
+  color: var(--color-white-1);
+  background-color: var(--color-purple-3);
+}
+
+.accordion__top:hover .accordion__btn svg {
+  border-color: var(--color-purple-3);
+  fill: var(--color-purple-2);
+  outline: none;
+}
+.accordion__top:hover .accordion__title {
+  color: var(--color-purple-3);
+}
+
+.accordion__top:focus-within {
+  outline: 0;
+}
+
+.accordion__item.is-active .accordion__top {
+  border-color: var(--color-purple-4);
+}
+
+.accordion__item.is-active .accordion__btn {
+  transform: rotate(0);
+  border-color: var(--color-purple-4);
+  outline-offset: -2px;
+  outline: 2px solid var(--color-purple-3);
+  border-radius: 100%;
+}
+
+.accordion__item.is-active .accordion__btn svg {
+  fill: var(--color-purple-1);
+}
+
+.accordion__item.is-active .accordion__top .accordion__title {
+  color: var(--color-purple-4);
+}
+
+/* .accordion__item.is-active .accordion__top + .accordion__bottom {
+  border-bottom: 1px solid var(--color-purple-4);
+  position: relative;
+  z-index: 2;
+} */
+
+.accordion__item.ac {
+  margin: 0;
+  border: none;
+}
+.accordion__bottom {
+  line-height: 2;
 }
