--- a/css/style.css
+++ b/css/style.css
@@ -918,6 +918,11 @@ body {
 }
 
 .catalog__person {
+  display: none;
+}
+
+.catalog__person--active {
+  display: block;
   max-width: 750px;
   margin-right: 50px;
 }
@@ -974,8 +979,8 @@ body {
 
   border-top: 1px solid var(--color-grey-4);
   border-bottom: 1px solid var(--color-grey-4);
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   margin-top: -1px;
   transition: border-color .3s ease-in-out;
@@ -990,6 +995,7 @@ body {
   transition-property: transform;
   transition: .3s ease-in-out;
   border-radius: 100%;
+  outline: 0;
 }
 
 .accordion__btn svg {
@@ -1041,6 +1047,7 @@ body {
   fill: var(--color-purple-2);
   outline: none;
 }
+
 .accordion__top:hover .accordion__title {
   color: var(--color-purple-3);
 }
@@ -1082,3 +1089,85 @@ body {
 .accordion__bottom {
   line-height: 2;
 }
+
+.accordion__persons-list {
+  padding: 25px 0;
+  display: block;
+  column-fill: auto;
+  column-count: 3;
+  column-gap: 50px;
+  min-height: auto;
+  width: 100%;
+}
+
+.accordion__btn-person {
+  position: relative;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-black-2);
+  cursor: pointer;
+}
+
+.accordion__btn-person::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 2px;
+  width: 100%;
+  height: 1px;
+  background-color: var(--color-purple-3);
+  transition: opacity .3s ease-in-out;
+  opacity: 0;
+}
+
+.accordion__btn-person:hover::before {
+  opacity: 1;
+}
+
+.accordion__btn-person:focus-visible {
+  background-color: var(--color-purple-3);
+  outline: 0;
+}
+
+.accordion__empty {
+  padding: 25px 0;
+  align-items: center;
+}
+
+.accordion__fugure {
+  background-image: url('../img/catalog/empty-img.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  max-width: 275px;
+  height: 189px;
+  margin-right: 24px;
+}
+
+.accordion__text {
+  max-width: 275px;
+}
+
+.accordion__subtitle {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: var(--color-black-2);
+}
+
+.accordion__desc {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--color-black-2);
+}
+
+.accordion__link-btn {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: var(--color-purple-3);
+}
+
