--- a/css/style.css
+++ b/css/style.css
@@ -1189,15 +1189,24 @@ body {
   height: auto;
 }
 
+.events-slide {
+  height: auto;
+}
+
 .events__article {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
   height: 100%;
   outline-offset: -1px;
   outline: 1px solid var(--color-grey-4);
 }
 
 .events__img {
+  flex-shrink: 0;
   display: block;
-  width: 500px;
+  width: 100%;
   height: 300px;
   background-position: center;
   background-repeat: no-repeat;
@@ -1244,8 +1253,6 @@ body {
 
 .events__content {
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
   flex-basis: 100%;
   height: 100%;
   padding: 13px 50px 43px 50px;
@@ -1267,6 +1274,10 @@ body {
   margin-bottom: 64px;
 }
 
+.events__action {
+  margin-top: auto;
+}
+
 .events__btn-link {
   padding-bottom: 3px;
   border-bottom: 1px solid var(--color-purple-3);
@@ -1274,4 +1285,35 @@ body {
   font-size: 16px;
   line-height: 32px;
   color: var(--color-purple-3);
+}
+
+.events__buttons {
+  position: relative;
+  top: 350px;
+}
+
+.events__btn {
+  width: 50px;
+  height: 50px;
+}
+
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+  content: '';
+}
+
+.swiper-button-next:after, .swiper-rtl .swiper-button-perv:after {
+  content: '';
+}
+
+.evetns__btn--prev {
+  transform: rotate(180deg) translateX(10px);
+}
+.evetns__btn--next {
+  right: 0;
+  transform: translateX(20px);
+}
+
+.evetns__btn--next.swiper-button-disabled,
+.evetns__btn--prev.swiper-button-disabled {
+  opacity: 0;
 }
