--- a/css/style.css
+++ b/css/style.css
@@ -1333,3 +1333,117 @@ body {
 .evetns__btn--prev.swiper-button-disabled {
   opacity: 0;
 }
+
+.projects__title {
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 65px;
+  color: var(--color-black-2);
+}
+
+.projects__description {
+  max-width: 1080px;
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-black-2);
+}
+
+.projects__link {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 32px;
+  color: var(--color-purple-3);
+  transition: border-bottom .3s ease-in-out;
+}
+
+.projects__link:focus-visible {
+  color: var(--color-white-1);
+  background-color: var(--color-purple-3);
+}
+
+.projects__link:hover {
+  border-bottom: 1px solid var(--color-purple-3);
+}
+
+.projects__tooltip-btn {
+  cursor: pointer;
+  transform: translateY(2px);
+}
+
+.projects__tooltip-btn .tooltip-icon {
+  fill: transparent;
+}
+
+.projects__tooltip-btn .tooltip-stroke {
+  stroke: var(--color-purple-3);
+}
+
+.projects__tooltip-btn .tooltip-symbol {
+  fill: var(--color-black-1);
+}
+
+.projects__tooltip-btn:hover .tooltip-icon {
+  fill: var(--color-purple-3);
+}
+
+.projects__tooltip-btn:hover .tooltip-symbol {
+  fill: var(--color-white-1);
+}
+
+.projects__subtitle {
+  margin-bottom: 23px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: var(--color-black-2);
+}
+
+.projects__swiper {
+  width: 90%;
+  margin: 0 30px;
+}
+
+.projects__slider {
+  max-width: calc((100% - 106px) / 3);
+  height: 150px;
+  border: 1px solid var(--color-grey-4);
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.projects__link-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 10px;
+  /* height: 100%; */
+  width: 100%;
+}
+
+.projects__img {
+  display: block;
+  filter: grayscale(1);
+  transition: all 0.5s ease-in-out;
+}
+
+.projects__buttons {
+  position: relative;
+  top: 75px;
+}
+
+.projects__btn {
+  width: 30px;
+  height: 30px;
+}
+
+.projects__btn--prev {
+  left: 0;
+}
+.projects__btn--next {
+  transform: rotate(180deg) translateX(30px);
+  left: auto;
+  right: 0;
+}
