--- a/css/media.css
+++ b/css/media.css
@@ -223,6 +223,11 @@
   .events__pagination {
     display: block;
   }
+
+  .projects__img {
+    max-height: 49px;
+    max-width: 80%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -280,6 +285,14 @@
     column-count: 3;
     column-gap: 30px;
     outline: none;
+  }
+
+  .projects__swiper {
+    width: 85%;
+  }
+
+  .projects__img {
+    max-height: 52px;
   }
 }
 
@@ -339,6 +352,14 @@
 
   .accordion__persons-list  {
     column-count: 2;
+  }
+
+  .projects__swiper {
+    width: 70%;
+  }
+
+  .projects__img {
+    max-height: 25px;
   }
 }
 
