--- a/css/media.css
+++ b/css/media.css
@@ -237,6 +237,10 @@
     max-width: calc((100% - 54px) / 2);
     height: 128px;
   }
+
+  .projects__link-img {
+    height: 128px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -310,6 +314,10 @@
 
   .projects__slider {
     max-width: calc((100% - 38px) / 2);
+    height: 106px;
+  }
+
+  .projects__link-img {
     height: 106px;
   }
 }
