--- a/css/style.css
+++ b/css/style.css
@@ -1536,3 +1536,55 @@ body {
 .contacts__whatsapp {
   margin-right: 20px;
 }
+
+.yandex__map {
+  width: 100%;
+  height: 700px;
+}
+
+[class*="copyrights-pane"] {
+  display: none !important;
+}
+
+[class*="ground-pane"] {
+  filter: grayscale(1);
+}
+
+[class*="float-button"] {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  padding-left: 0 !important;
+  height: 40px !important;
+  width: 40px !important;
+  box-sizing: border-box !important;
+}
+
+[class*="controls__control"] {
+  position: absolute !important;
+  width: 100% !important;
+}
+
+[class*="control_toolbar"] {
+  position: absolute !important;
+  top: 460px !important;
+  right: 10px !important;
+  width: auto !important;
+}
+
+[class*="zoom"] {
+  position: absolute !important;
+  right: 10px !important;
+}
+
+[class*="zoom__plus"] {
+  top: 265px !important;
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+
+[class*="zoom__minus"] {
+  top: 305px !important;
+  border-top-left-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+}
