--- a/css/style.css
+++ b/css/style.css
@@ -1465,7 +1465,8 @@ body {
 .contacts__container {
   justify-content: space-between;
   align-items: center;
-  padding: 38px 0;
+  padding-top: 38px;
+  padding-bottom: 38px;
 }
 
 .contacts__title {
@@ -1539,6 +1540,7 @@ body {
 
 .yandex__map {
   width: 100%;
+  max-width: 1920px;
   height: 700px;
 }
 
