--- a/css/style.css
+++ b/css/style.css
@@ -1038,13 +1038,17 @@ body {
 .accordion__top:focus-within .accordion__btn svg{
   border-color: var(--color-purple-3);
   fill: var(--color-purple-2);
-  outline: 2px solid var(--color-purple-3);
+  outline: 3px solid var(--color-purple-3);
   border-radius: 100%;
   outline: 0;
   border: 0;
 }
 
-.accordion__top:focus-within .accordion__title {
+.accordion__top:focus-within {
+  outline: 0;
+}
+
+.accordion__top:focus-within:not(:active) .accordion__title {
   color: var(--color-white-1);
   background-color: var(--color-purple-3);
 }
@@ -1057,10 +1061,6 @@ body {
 
 .accordion__top:hover .accordion__title {
   color: var(--color-purple-3);
-}
-
-.accordion__top:focus-within {
-  outline: 0;
 }
 
 .accordion__item.is-active .accordion__top {
@@ -1082,6 +1082,10 @@ body {
 .accordion__item.is-active .accordion__top .accordion__title {
   color: var(--color-purple-4);
 }
+
+/* .accordion__item.is-active:not(:active) .accordion__title {
+  color: var(--color-white-1);
+} */
 
 .accordion__item.ac {
   margin: 0;
@@ -1303,6 +1307,23 @@ body {
   color: var(--color-purple-3);
 }
 
+.events__btn-link:focus-visible {
+  padding: 5px;
+  background-color: var(--color-purple-3);
+  color: var(--color-grey-3);
+  outline: 0;
+}
+
+.events__btn-link:hover {
+  color: var(--color-purple-4);
+  border-bottom: 1px solid var(--color-purple-4);
+}
+
+.events__btn-link:active {
+  color: var(--color-black-1);
+  border-bottom: 1px solid var(--color-black-1);
+}
+
 .events__buttons {
   position: relative;
   top: 350px;
@@ -1311,6 +1332,12 @@ body {
 .events__btn {
   width: 50px;
   height: 50px;
+}
+
+.events__btn:active svg {
+  border-radius: 100%;
+  outline-offset: -2px;
+  outline: 2px solid var(--color-purple-3);
 }
 
 .swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
@@ -1360,11 +1387,18 @@ body {
 }
 
 .projects__link:focus-visible {
+  outline: 0;
+  padding: 5px;
   color: var(--color-white-1);
   background-color: var(--color-purple-3);
 }
 
 .projects__link:hover {
+  border-bottom: 1px solid var(--color-purple-3);
+}
+
+.projects__link:active {
+  color: var(--color-purple-4);
   border-bottom: 1px solid var(--color-purple-3);
 }
 
@@ -1413,6 +1447,14 @@ body {
   transition: all 0.3s ease-in-out;
 }
 
+.projects__slider:active {
+  border: 1px solid var(--color-purple-3);
+}
+
+.projects__slider:focus-visible {
+  border: 1px solid var(--color-purple-3);
+}
+
 .projects__link-img {
   display: flex;
   justify-content: center;
@@ -1440,6 +1482,21 @@ body {
 .projects__btn {
   width: 30px;
   height: 30px;
+}
+
+.projects__icon {
+  fill: var(--color-grey-3)
+}
+
+.projects__icon:hover {
+  fill: var(--color-purple-1)
+}
+
+.projects__icon:active {
+  border-radius: 100%;
+  outline-offset: -2px;
+  outline: 2px solid var(--color-purple-3);
+  fill: var(--color-purple-1)
 }
 
 .projects__btn--prev,
@@ -1501,6 +1558,14 @@ body {
   border-radius: 100px;
 }
 
+.application__btn:hover {
+  background-color: var(--color-grey-3);
+}
+
+.application__btn:focus-visible {
+  background-color: var(--color-grey-3);
+}
+
 .application__name,
 .application__tel {
   margin-right: 20px;
@@ -1535,7 +1600,29 @@ body {
 }
 
 .contacts__whatsapp {
+  outline: 0;
   margin-right: 20px;
+}
+
+.contacts__telegram {
+  outline: 0;
+}
+
+.contacts__whatsapp:focus-visible svg,
+.contacts__telegram:focus-visible svg {
+  outline-offset: -1px;
+  outline: 1px solid var(--color-purple-3);
+  border-radius: 100%;
+}
+
+.contacts__whatsapp:hover svg,
+.contacts__telegram:hover svg {
+  opacity: .5;
+}
+
+.contacts__whatsapp:active svg,
+.contacts__telegram:active svg {
+  opacity: .5;
 }
 
 .yandex__map {
@@ -1601,5 +1688,32 @@ body {
 }
 
 .footer__vk {
+  outline: 0;
   margin-right: 20px;
 }
+
+.footer__ok {
+  outline: 0;
+}
+
+.footer__vk svg,
+.footer__ok svg {
+  fill: var(--color-grey-4);
+}
+
+.footer__vk:focus-visible svg,
+.footer__ok:focus-visible svg {
+  opacity: .5;
+}
+
+.footer__vk:hover svg,
+.footer__ok:hover svg path {
+  fill: var(--color-white-1);
+}
+
+.footer__vk:active svg,
+.footer__ok:active svg path {
+  fill: #9D5CD0;
+}
+
+
