--- a/css/style.css
+++ b/css/style.css
@@ -1489,6 +1489,20 @@ body {
   height: 30px;
 }
 
+.tippy-box {
+  padding: 5px 0;
+  font-family: "OpenSans", sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: var(--color-purple-3);
+  text-align: center;
+  border-radius: 0;
+}
+
+.tippy-box[data-placement^="top"] > .tippy-arrow::before {
+  border-top-color: var(--color-purple-3);
+}
+
 .projects__icon {
   fill: var(--color-grey-3)
 }
